# grimoire-and-steel

./: .gitignore  Grimore-and-Steel-Design.txt  README.md
game/: CMakeLists.txt  CMakePresets.json  Grimoire-and-Steel-Rules.md  README.md  grimoire_and_steel_character_sheets_v0_5.html  grimoire_and_steel_rules_bible_v0_5.md
game/core/: CMakeLists.txt
game/core/include/gns/: AtomicDb.h  Character.h  CharacterIO.h  CombatEngine.h  Content.h  Database.h  Dice.h  EncounterDirector.h  Model.h  Module.h  Narrator.h  PlotTracker.h  Repository.h  Rules.h  RulesAdjudicator.h  SaveIO.h  Session.h
game/core/src/: AtomicDb.cpp  Character.cpp  CharacterIO.cpp  CombatEngine.cpp  Content.cpp  Database.cpp  Dice.cpp  EncounterDirector.cpp  ModuleIO.cpp  Narrator.cpp  PlotTracker.cpp  Repository.cpp  Rules.cpp  RulesAdjudicator.cpp  SaveIO.cpp  Session.cpp
game/creator/: CMakeLists.txt
game/creator/src/: main.cpp
game/engine/: CMakeLists.txt
game/engine/src/: main.cpp
game/shared/: CMakeLists.txt
game/shared/include/gns/ui/: MapRender.h
game/shared/src/: MapRender.cpp
game/tests/: CMakeLists.txt
game/tests/src/: test_main.cpp
gns/: Launcher.hta  gns.db  requirements.txt
gns/app/: app.py
gns/app/templates/: base.html  index.html  rows.html  search.html  section.html  spell.html
gns/data/: advancement_level.json  armor.json  calling.json  calling_training_option.json  calling_weapon_option.json  challenge_number.json  character_sheet.json  characters.json  cleric_spells.json  environments.json  equipment.json  game.json  kin.json  level_improvement_option.json  magic_user_spells.json  magic_weapon_example.json  module_completion_award.json  monster.json  monsters.json  rules.json  rules_search.json  section.json  spell.json  training.json  trait.json  treasure.json  weapon_category.json
gns/db/: schema.sql
plans/: Grimore-and-Steel-Design.txt  dungeon-master-engine-design.md
tools/: Launch DB Console.vbs  README.md  db_console.pyw  recover_gnsmod.py  sql_engine.py  test_engine.py
